2006-05-16  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_WebEmbedList.py: icon fixes
	* src/images/stock_insert-url.png: added
	* src/images/person.png: added
	* src/images/relation.png: added
	* src/images/Makefile.am: added new images
	* src/gramps_main.py: register icons as stock
	* src/GrampsDb/_ReadGedcom.py: handle blank lines

2006-05-16  Alex Roitman  <shura@gramps-project.org>
	* src/Selectors/_SelectPerson.py: Use new package.
	* src/plugins/RelCalc.py: Use new package.
	* src/DataViews/_PersonView.py: Use new package.
	* src/DisplayModels: Make new package.
	* src/Makefile.am: Remove old files.
	* src/Filters/_PersonSidebarFilter.py: Import gettext.
	* src/Filters/_SidebarFilter.py: Import gettext.
	* src/Filters/Makefile.am: Ship new files.

2006-05-16  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Add navigation-arrows to the tree;
	work around bug in database-changed signals

2006-05-15  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsXMLDB.py: Use callback, call parent's
	close() on close.
	* src/GrampsDb/_GrampsGEDDB.py: Use callback, call parent's
	close() on close.
	* src/GrampsDb/_WriteXML.py: Use new callback class.
	* src/GrampsDb/_WriteGedcom.py: Use new callback class.
	* src/GrampsDb/_DbUtils.py (db_copy): Update secondary indices for
	the InMem databases.

2006-05-15  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: new stock icon support
	* src/gramps_main.py: new stock icon support
	* src/PageView.py: new stock icon support
	* src/images/stock_new-html.png: added
	* src/images/stock_delete-bookmark.png: added
	* src/images/stock_export.png: added
	* src/images/stock_edit-bookmark.png: added
	* src/images/stock_add-bookmark.png: added
	* src/images/stock_undo-history.png: added
	* src/images/stock_bookmark.png: added
	* src/DisplayTabs/_DataEmbedList.py: disable DND

2006-05-15  Alex Roitman  <shura@gramps-project.org>